[package]
authors = ["Aaron Pribadi <aaron.pribadi@gmail.com>"]
edition = "2021"
license = "Artistic-2.0"
name = "firefly-rng"
version = "0.1.0"

[dependencies]
getrandom = { version = "0.2.9", optional = true }

[dev-dependencies]
expect-test = "1.4.1"

[lints.rust]
elided_lifetimes_in_paths = "warn"
non_ascii_idents = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"
